# uw-coursemap

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  color.py  course.py  crowdin.yml  cytoscape.py  docker-compose.yml  enrollment.py  enrollment_data.py  instructors.py  json_serializable.py  logging_util.py  madgrades.py  main.py  map.html  multithreading.py  open_ai.py  package-lock.json  package.json  rmp.py  safe_parse.py  save.py  server.py  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  webscrape.py
.github/: dependabot.yml
data/: global_graph.json  global_style.json  stats.json  update.json
docs/: .gitignore  about.md  advanced.md  branding.md  code-of-conduct.md  contributing.md  index.md  team.md
generation/: Pipfile  aggregate.py  aio_cache.py  building_aggregator.py  building_highlight.py  building_loader.py  cache.py  color.py  course.py  cytoscape.py  embeddings.py  enrollment.py  enrollment_data.py  http_utils.py  instructors.py  json_serializable.py  madgrades.py  main.py  map.py  meeting_data_loader.py  meeting_processor.py  memoizer.py  name_matcher.py  open_ai.py  pyproject.toml  request_util.py  requirement_ast.py  safe_parse.py  sanitization.py  save.py  sitemap_generation.py  spatial_query.py  timer.py  trips.py  upload.py  webscrape.py
generation/schemas/: __init__.py  course.py  endpoint.py  endpoints.py  enrollment.py  grades.py  instructor.py  openapi.py  requirement_ast.py
http/: rmp.http
messages/: en.json  ko.json  zh.json
search/: .dockerignore  Dockerfile  Pipfile  README.md  analyzer_test.py  app.py  building_aggregator.py  building_loader.py  data.py  data_loader.py  docker-compose.yml  es_util.py  main.py  map.py  meeting_data_loader.py  meeting_processor.py  pyproject.toml  search.py  spatial_query.py  test.py
src/: app.css  (+4 more)
(+12351 files in other folders)
