[project]
name = "uw-coursemap-generation"
version = "0.1.0"
description = "UW Course Map Data Generation Service"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp-client-cache[sqlite]>=0.13.0",
    "anyascii>=0.3.3",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.42.18",
    "coloredlogs>=15.0.1",
    "diskcache>=5.6.3",
    "fake-useragent>=2.2.0",
    "frozendict>=2.4.6",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "hf-xet>=1.1.5",
    "keybert>=0.9.0",
    "lxml>=6.0.0",
    "nameparser>=1.1.3",
    "numpy>=2.1.2",
    "pathvalidate>=3.3.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "rtree>=1.4.0",
    "sentence-transformers>=5.0.0",
    "shapely>=2.1.1",
    "tenacity>=9.1.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
