[project]
name = "uw-coursemap-search"
version = "0.1.0"
description = "UW Course Map Search API Service"
requires-python = "==3.12.*"
dependencies = [
    "coloredlogs>=15.0.1",
    "elasticsearch>=9.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
